# bbg_motor_cape

./: .gitignore  CMakeLists.txt  README.md
include/: Channel.h  Constants.h  DCMotor.h  I2C.h  MotorBridgeCape.h
src/: Channel.cpp  DCMotor.cpp  I2C.cpp  MotorBridgeCape.cpp  main.cpp
